--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "classnames": "2.2.6",
+        "formik": "^1.5.2",
         "gsap": "2.0.2",
         "immutable": "4.0.0-rc.12",
         "moment": "2.23.0",
@@ -38,7 +39,8 @@
         "redux-saga": "0.16.2",
         "reselect": "4.0.0",
         "reset-css": "4.0.1",
-        "socket.io-client": "2.2.0"
+        "socket.io-client": "2.2.0",
+        "yup": "^0.27.0"
     },
     "devDependencies": {
         "@babel/core": "7.2.2",
